fixed bug with Guest#1234 too long for overview
replaced the basecontainer with regular div

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -115,6 +115,7 @@ p {
   font-family: $fontDefault;
   font-size: 18px;
   caret-color: transparent;
+  color: white;
 }
 
 p.large {
