--- a/src/styles/views/Overview.scss
+++ b/src/styles/views/Overview.scss
@@ -18,8 +18,8 @@
   }
   &.container {
     overflow: hidden; /* Allow content to overflow outside the padding */
-    height: fit-content;
-    width: fit-content;
+    max-height: 65vh;
+    width: 1300px;
     background: black;
     padding: 2em;
     border-radius: $borderRadius;
@@ -33,7 +33,16 @@
     padding-left: 20px;
     padding-right: 20px;
     overflow: hidden;
-    width: 360px;
+    width: 400px;
+    height: 100%;
+    position: relative;
+
+  }
+  &.sub-container-guest {
+    padding-left: 20px;
+    padding-right: 20px;
+    overflow: hidden;
+    width: 400px;
     height: 100%;
     position: relative;
   }
@@ -53,6 +62,7 @@
     flex-direction: row;
     justify-content: space-between;
     min-height: 60px;
+    width: 308px;
   }
   &.header-hey-username {
     display: flex;
@@ -62,7 +72,7 @@
   }
   &.player-container {
     position: relative;
-    max-height: 525px;
+    max-height: 575px;
     overflow-y: auto;
     overflow-x: hidden;
     width: fit-content;
@@ -73,8 +83,24 @@
     align-items: center;
     box-shadow: $dropShadow;
     scrollbar-width: thin; /* Can be "auto", "thin", or "none" */
-    scrollbar-color: $grey black; /* thumb and track color */
+    scrollbar-color: rgba(44, 44, 44, 1) black; /* thumb and track color */
+    padding-right: 10px;
   }
+
+  /* WebKit (Safari, Chrome) specific scrollbar styling */
+  &.player-container::-webkit-scrollbar {
+    width: 12px;
+  }
+  &.player-container::-webkit-scrollbar-track {
+    background: black;
+  }
+  &.player-container::-webkit-scrollbar-thumb {
+    background-color: rgba(44, 44, 44, 1);
+    border-radius: 10px;
+    border: 3px solid black; /* Border to create space around thumb */
+  }
+
+
   &.outer-text-wrapper {
     width: 320px; /* its as wide as a player box*/
     padding-bottom: 10em;
@@ -101,9 +127,6 @@
     display: flex;
     justify-content: center;
   }
-
-
-
 
   .scroll-indicator {
     text-align: center;
